--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^5.1.0",
     "madge": "^3.12.0",
     "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "next": "10.0.3",
     "nprogress": "^0.2.0",
     "postcss-import": "^14.0.0",
