--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-circle": "^1.1.1",
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.3.4",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
