--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "chart.js": "^2.9.4",
+    "crypto-js": "^4.1.1",
     "depcheck": "^1.3.1",
     "eslint": "^7.16.0",
     "eslint-config-react-app": "^6.0.0",
