--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "madge": "^3.12.0",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
