--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dropzone": "^11.3.4",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
+    "react-images-uploading": "^3.1.3",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
     "react-select": "^3.1.1",
