--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.4",
+    "react-google-autocomplete": "^2.4.3",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-images-uploading": "^3.1.3",
