--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-images-uploading": "^3.1.3",
+    "react-input-slider": "^6.0.1",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
     "react-select": "^3.1.1",
