--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-star-ratings": "^2.3.0",
     "react-switch": "^5.0.1",
     "react-table": "^7.6.2",
+    "react-tooltip": "^4.2.21",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
