--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "laravel-echo": "^1.11.3",
     "madge": "^3.12.0",
     "moment": "^2.29.1",
     "momentjs": "^2.0.0",
@@ -35,6 +36,7 @@
     "nprogress": "^0.2.0",
     "postcss-import": "^14.0.0",
     "prop-types": "^15.7.2",
+    "pusher-js": "^7.0.3",
     "rc-slider": "^9.7.1",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
