--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.4",
     "crypto-js": "^4.1.1",
     "depcheck": "^1.3.1",
+    "emoji-picker-react": "^3.4.8",
     "eslint": "^7.16.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
