wallet ui payment and agreement payment and razorpay

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ BASE_URL=http://localhost:3000
 MAP_API_KEY=AIzaSyAk4woSZCvJq6X_Da2dt0-NMIFGV7qxNvM
 NEXT_PUBLIC_GA_ID=
 NEXT_PUBLIC_GADS_ID=
+NEXT_PUBLIC_RAZOR_KEY=rzp_test_2wlA7A5Vpf1BDo
