--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.11.1",
     "react-circle": "^1.1.1",
+    "react-datepicker": "^4.5.0",
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.4",
@@ -53,7 +54,7 @@
     "react-input-slider": "^6.0.1",
     "react-popper": "^2.2.4",
     "react-redux": "^7.2.2",
-    "react-select": "^3.1.1",
+    "react-select": "^5.2.1",
     "react-star-ratings": "^2.3.0",
     "react-switch": "^5.0.1",
     "react-table": "^7.6.2",
