--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.4",
+    "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.3",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
