--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dropzone": "^11.3.4",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.4.3",
+    "react-grid-carousel": "^1.0.1",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-images-uploading": "^3.1.3",
