--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "wow.js": "^1.2.2"
   },
   "license": "ISC",
   "devDependencies": {
